issue with taglist bg

--- a/index.html
+++ b/index.html
@@ -60,7 +60,77 @@
           >
             <strong>Ingrédients</strong><span class="arrow col-1 end-0"></span>
           </button>
-          <ul id="ingredients-tag-list" class="sub-search__taglist col-12 dropdown-menu btn-primary text-white border-0 rounded-bottom" role="listbox">
+          <ul id="ingredients__taglist" class="sub-search__taglist col-12 dropdown-menu btn-primary text-white border-0 rounded-bottom" role="listbox">
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
+            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
+            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
             <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
             <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
             <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
@@ -79,7 +149,7 @@
           >
             <strong>Appareils</strong><span class="arrow col-1 end-0"></span>
           </a>
-          <ul id="appliances-tag-list" class="sub-search__taglist dropdown-menu btn-primary text-white" role="listbox">
+          <ul id="appliances__taglist" class="sub-search__taglist dropdown-menu btn-primary text-white" role="listbox">
             <li class="dropdown-item" aria-selected="false" role="option">Mixeur</li>
             <li class="dropdown-item" aria-selected="false" role="option">Four</li>
             <li class="dropdown-item" aria-selected="false" role="option">Blender</li>
@@ -96,7 +166,7 @@
           >
             <strong>Ustensiles</strong><span class="arrow col-1 end-0"></span>
           </a>
-          <ul id="ustensils-tag-list" class="sub-search__taglist dropdown-menu btn-primary text-white" role="listbox">
+          <ul id="ustensils__taglist" class="sub-search__taglist dropdown-menu btn-primary text-white" role="listbox">
             <li class="dropdown-item" aria-selected="false" role="option">Mixeur</li>
             <li class="dropdown-item" aria-selected="false" role="option">Four</li>
             <li class="dropdown-item" aria-selected="false" role="option">Blender</li>
