--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
       </section>
 
       <!-- RECIPES SECTION -->
-      <section id="recipes" class="row gy-3 justify-content-between">
+      <section id="recipes" class="row gy-3 justify-content-between mb-3">
+        <!-- Example
         <article class="card col-12 col-md-6 col-lg-4 border-0">
           <figure class="card-img-top px-0 mb-0"></figure>
           <div class="card-body d-flex flex-column justify-content-start rounded-bottom">
@@ -196,51 +197,7 @@
               </p>
             </div>
           </div>
-        </article>
-        <article class="card col-12 col-md-6 col-lg-4 border-0">
-          <figure class="card-img-top px-0 mb-0"></figure>
-          <div class="card-body d-flex flex-column justify-content-start rounded-bottom">
-            <div class="row d-flex justify-content-between">
-              <h2 class="card-title col-8 col-sm-9 col-md-7 col-xl-8">Shoyu ramen</h2>
-              <h2 class="col text-right font-weight-bold"><i class="far fa-clock"></i> 80 min</h2>
-            </div>
-            <div class="row justify-content-between align-items-start">
-              <ul class="card-text col-6 list-unstyled">
-                <li><strong>Poitrine de Porc :</strong> 500 g</li>
-                <li><strong>Sauce soja :</strong> 100 ml</li>
-                <li><strong>Mirin :</strong> 50 ml</li>
-                <li><strong>Saké :</strong>1 cs</li>
-              </ul>
-              <p class="card-text col-6">
-                Préparer le dashi qui sera ajouté au bouillon. Dans un récipient avec couvercle, mélanger dans l’eau froide les shitaké et le kombu.
-                Laisser reposer au moins 4h, de préférence 12 à 24h. Dans une casserole, ajouter tous les ingrédients du taré et mélanger pour que
-                tout le katsuobushi soit imbibé de sauce soja.
-              </p>
-            </div>
-          </div>
-        </article>
-        <article class="card col-12 col-md-6 col-lg-4 border-0">
-          <figure class="card-img-top px-0 mb-0"></figure>
-          <div class="card-body d-flex flex-column justify-content-start rounded-bottom">
-            <div class="row d-flex justify-content-between">
-              <h2 class="card-title col-8 col-sm-9 col-md-7 col-xl-8 text-truncate">Shoyu ramen fhjdoljkswgfhljkdhljhlfhdxwlkj</h2>
-              <h2 class="col text-right font-weight-bold"><i class="far fa-clock"></i> 880 min</h2>
-            </div>
-            <div class="row justify-content-between align-items-start">
-              <ul class="card-text col-6 list-unstyled">
-                <li><strong>Poitrine de Porc :</strong> 500 g</li>
-                <li><strong>Sauce soja :</strong> 100 ml</li>
-                <li><strong>Mirin :</strong> 50 ml</li>
-                <li><strong>Saké :</strong>1 cs</li>
-              </ul>
-              <p class="card-text col-6">
-                Préparer le dashi qui sera ajouté au bouillon. Dans un récipient avec couvercle, mélanger dans l’eau froide les shitaké et le kombu.
-                Laisser reposer au moins 4h, de préférence 12 à 24h. Dans une casserole, ajouter tous les ingrédients du taré et mélanger pour que
-                tout le katsuobushi soit imbibé de sauce soja.
-              </p>
-            </div>
-          </div>
-        </article>
+        </article> -->
       </section>
     </main>
     <script src="assets/dist/js/home.js"></script>
