static css done

--- a/index.html
+++ b/index.html
@@ -51,153 +51,13 @@
         </div>
       </section>
       <!-- SUB SEARCHS SECTION-->
-      <section id="sub-searchs" class="row justify-content-between justify-content-lg-start">
-        <!-- Ingredients Sub Search 
-        <div
-          id="sub-search__ingredients"
-          class="sub-search__bloc col-12 col-lg-3 mb-3 dropdown d-flex flex-column justify-content-between align-items-center"
-        >
-          <button
-            class="
-              sub-search__button
-              w-100
-              mw-100
-              col
-              btn btn-lg btn-primary
-              text-white text-left
-              font-weight-bold
-              d-flex
-              justify-content-between
-              align-items-center
-            "
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <strong>Ingrédients</strong><span class="arrow col-1 end-0"></span>
-          </button>
-          <ul
-            id="ingredients__taglist"
-            class="sub-search__taglist w-100 mw-100 dropdown-menu btn-primary text-white border-0 rounded-bottom"
-            role="listbox"
-          >
-            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
-            <li class="dropdown-item" aria-selected="false" role="option">thon en miettes</li>
-            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
-            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
-            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
-            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
-            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
-            <li class="dropdown-item" aria-selected="false" role="option">tofu</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Dashi</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Nori</li>
-          </ul>
-        </div>
-        Appliances Sub Search
-        <div
-          id="sub-search__appliances"
-          class="sub-search__bloc col-12 col-lg-3 mb-3 dropdown d-flex flex-column justify-content-between align-items-center"
-        >
-          <div
-            class="sub-search__button d-flex w-100 mw-100 col btn btn-lg btn-success justify-content-between align-items-center"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <input class="col btn btn-lg btn-success text-white text-left font-weight-bold" type="button" value="Appareils" />
-            <span class="arrow col-1 end-0"></span>
-          </div>
-          <ul
-            id="appliances__taglist"
-            class="sub-search__taglist w-100 mw-100 dropdown-menu btn-success text-white border-0 rounded-bottom"
-            role="listbox"
-          >
-            <li class="dropdown-item" aria-selected="false" role="option">Mixeur</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Four</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Blender</li>
-          </ul>
-        </div>
-        Appliances Sub Search
-        <div id="sub-search__appliances" class="sub-search__bloc col-12 col-lg-3 mb-3 dropdown d-flex flex-column justify-content-between align-items-center">
-          <button
-            class="sub-search__button w-100 mw-100 col btn btn-lg btn-success text-white text-left font-weight-bold d-flex justify-content-between align-items-center"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <strong>Appareils</strong><span class="arrow col-1 end-0"></span>
-          </button>
-          <ul id="appliances__taglist" class="sub-search__taglist w-100 mw-100 dropdown-menu btn-success text-white border-0 rounded-bottom" role="listbox">
-            <li class="dropdown-item" aria-selected="false" role="option">Mixeur</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Four</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Blender</li>
-          </ul>
-        </div>
-         Ustensils Sub Search
-        <div
-          id="sub-search__ustensils"
-          class="sub-search__bloc col-12 col-lg-3 mb-3 dropdown d-flex flex-column justify-content-between align-items-center"
-        >
-          <button
-            class="
-              sub-search__button
-              w-100
-              mw-100
-              col
-              btn btn-lg btn-secondary
-              text-white text-left
-              font-weight-bold
-              d-flex
-              justify-content-between
-              align-items-center
-            "
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <strong>Ingrédients</strong><span class="arrow col-1 end-0"></span>
-          </button>
-          <ul id="ustensils__taglist" class="sub-search__taglist w-100 mw-100 dropdown-menu text-white border-0 rounded-bottom" role="listbox">
-            <li class="dropdown-item" aria-selected="false" role="option">Mixeur</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Four</li>
-            <li class="dropdown-item" aria-selected="false" role="option">Blender</li>
-          </ul>
-        </div> -->
+      <section id="sub-searchs" class="row justify-content-between justify-content-lg-start align-items-start">
+        <!-- Generate in js -->
       </section>
 
       <!-- RECIPES SECTION -->
       <section id="recipes" class="row gy-3 justify-content-between mb-3">
-        <!-- Example
-        <article class="card col-12 col-md-6 col-lg-4 border-0">
-          <figure class="card-img-top px-0 mb-0"></figure>
-          <div class="card-body d-flex flex-column justify-content-start rounded-bottom">
-            <div class="row d-flex justify-content-between">
-              <h2 class="card-title col-8 col-sm-9 col-md-7 col-xl-8">Shoyu ramen</h2>
-              <h2 class="col"><i class="far fa-clock"></i> 80 min</h2>
-            </div>
-            <div class="row justify-content-between align-items-start">
-              <ul class="card-text col-6 list-unstyled">
-                <li><strong>Poitrine de Porc :</strong> 500 g</li>
-                <li><strong>Sauce soja :</strong> 100 ml</li>
-                <li><strong>Mirin :</strong> 50 ml</li>
-                <li><strong>Saké :</strong>1 cs</li>
-              </ul>
-              <p class="card-text col-6">
-                Préparer le dashi qui sera ajouté au bouillon. Dans un récipient avec couvercle, mélanger dans l’eau froide les shitaké et le kombu.
-                Laisser reposer au moins 4h, de préférence 12 à 24h. Dans une casserole, ajouter tous les ingrédients du taré et mélanger pour que
-                tout le katsuobushi soit imbibé de sauce soja.
-              </p>
-            </div>
-          </div>
-        </article> -->
+        <!-- Generate in js -->
       </section>
     </main>
     <script src="assets/dist/js/home.js"></script>
