added tag fonctionnality in main search

--- a/index.html
+++ b/index.html
@@ -30,24 +30,11 @@
         <button class="col-1 position-absolute end-2 btn btn-lg bg-transparent text-dark"><i class="col-1 fas fa-search"></i></button>
       </section>
       <!-- TAGS SECTION -->
-      <section id="tags-container" class="row mb-3 justify-content-start align-items-center">
-        <div class="col-12">
-          <span class="tag btn btn-primary btn-sm mb-1">riz<i class="far fa-times-circle"></i></span>
+      <section id="tags" class="row mb-3 justify-content-start align-items-center">
+        <div class="tag-container col-12">
+          <!-- <span class="tag btn btn-primary btn-sm mb-1">riz<i class="far fa-times-circle"></i></span>
           <span class="tag btn btn-primary btn-sm mb-1">nori<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">Konjack<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">auto-cuiseur<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">riz<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">nori<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">Konjack<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">auto-cuiseur<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">riz<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">nori<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">Konjack<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">auto-cuiseur<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">riz<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">nori<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">Konjack<i class="far fa-times-circle"></i></span>
-          <span class="tag btn btn-primary btn-sm mb-1">auto-cuiseur<i class="far fa-times-circle"></i></span>
+          <span class="tag btn btn-primary btn-sm mb-1">auto-cuiseur<i class="far fa-times-circle"></i></span> -->
         </div>
       </section>
       <!-- SUB SEARCHS SECTION-->
