main search algo ok

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <input
           class="col-12 btn btn-lg bg-light text-left text-truncate"
           type="search"
+          autocomplete="off"
           id="main-search"
           placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette"
           aria-label="Search through site content"
