added : filter tags in sub search after a main search

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </section>
 
       <!-- RECIPES SECTION -->
-      <section id="recipes" class="row gy-3 justify-content-between mb-3">
+      <section id="recipes" class="row gy-3 justify-content-start mb-3">
         <!-- Generate in js -->
       </section>
     </main>
